hard-gists/d049a307a271052dc740/run.log
=== Docker Run Log for d049a307a271052dc740 ===
Started at: Mi 29. Okt 20:20:09 CET 2025

[2025-10-29 20:20:10] START: Running container for d049a307a271052dc740
[2025-10-29 20:20:10] SUCCESS: Container 349d5e125fe6bc3ea77e592b0c98d346f5e16b64f252dd651bbc576a2b48b712 started for d049a307a271052dc740
=== Container logs for d049a307a271052dc740 ===
  File "/snippet.py", line 15
    print '[%d][+] found encrypted MZ  @ %X'% (IDX,off)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d049a307a271052dc740 ===
[2025-10-29 20:20:12] INFO: Container 349d5e125fe6bc3ea77e592b0c98d346f5e16b64f252dd651bbc576a2b48b712 has stopped
